--- a/src/app/heroes/pages/new-page/new-page.component.html
+++ b/src/app/heroes/pages/new-page/new-page.component.html
@@ -1,26 +1,27 @@
-
+<!-- trabajamos con formularios reactivos -->
 
 <h1>
-  Editar / Agregar
+  {{ currentHero.id ? 'Editar' : 'Agergar'}}
   Heroe
-  <small>Superman</small>
+  <small *ngIf="currentHero.id">{{ currentHero.superhero }}</small>
 </h1>
-
-
 
 <mat-divider class="mb-2"></mat-divider>
 
 <div class="grid">
+
   <div class="col-12 sm:col-6">
     <mat-card>
       <mat-card-content>
-        <div class="grid">
+        <form class="grid" [formGroup]="heroForm" (ngSubmit)="onSubmit()">
+
           <mat-form-field class="col-12 sm:col-6">
             <mat-label>Super Heroe</mat-label>
             <input
             matInput
             type="text"
-            required=""
+            required
+            formControlName="superhero"
             />
           </mat-form-field>
 
@@ -29,7 +30,8 @@
             <input
             matInput
             type="text"
-            required=""
+            required
+            formControlName="alter_ego"
             />
           </mat-form-field>
 
@@ -38,7 +40,8 @@
             <input
             matInput
             type="text"
-            required=""
+            required
+            formControlName="first_appearance"
             />
           </mat-form-field>
 
@@ -47,13 +50,17 @@
             <input
             matInput
             type="text"
-            required=""
+            required
+            formControlName="characters"
             />
           </mat-form-field>
 
           <mat-form-field class="col-12 ">
             <mat-label>Creador</mat-label>
-            <mat-select required="">
+            <mat-select
+             required=""
+             formControlName="publisher"
+             >
               <mat-option *ngFor="let publisher of publishers"
               [value]="publisher.id">
                 {{ publisher.desc }}
@@ -61,17 +68,32 @@
             </mat-select>
           </mat-form-field>
 
-        </div>
+          <mat-form-field class="col-12 ">
+            <mat-label>Alternative Image</mat-label>
+            <input
+            matInput
+            type="text"
+            formControlName="alt_img"
+            />
+          </mat-form-field>
 
+        </form>
+
+        <!-- Si hay id se muestra el boton de lo contrario se oculta -->
         <div class="flex justify-content-between">
-          <button mat-flat-button
+          <button
+          *ngIf="currentHero.id"
+          (click)="onDeleteHero()"
+          mat-flat-button
           color="warn">
             Borrar
           </button>
+          <span></span>
           <!-- <span class="spacer"></span> -->
 
           <button mat-flat-button
-          color="primary">
+          color="primary"
+          (click)="onSubmit()">
             Guardar
           </button>
 
@@ -83,8 +105,10 @@
   <div class="col-12 sm:col-6">
 
     <mat-card>
-      <img [src]="" alt="imagen del heroe" mat-card-image>
+      <img [src]="currentHero | heroImage" alt="imagen del heroe" mat-card-image>
     </mat-card>
 
   </div>
 </div>
+
+
