--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -29,7 +29,9 @@
             <mat-icon>menu</mat-icon>
         </button>
         <span class="spacer"></span>
-        <button mat-button>
+
+        <span>{{ user?.user }} </span>
+        <button mat-button (click)="onLogout()">
             Logout
         </button>
 
